# VkEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  ModelLoader.cpp  ModelLoader.h  VkEngine.sln  VkEngine.vcxproj  VkEngine.vcxproj.filters  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDebugHandler.cpp  VulkanDebugHandler.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanFrameBuffers.cpp  VulkanFrameBuffers.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  (+9 more)
Engine/Core/: defines.h
Engine/Loaders/: GltfLoader.cpp  GltfLoader.h  ModelLoader.cpp  ModelLoader.h
Engine/Resources/: ResourceManager.cpp  ResourceManager.h
Engine/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
Renderer/Includes/: VulkanIncludes.h
Renderer/Platform/: Window.cpp
Renderer/Renderer/: CommandBufferRecorder.cpp  CommandBufferRecorder.h  DescriptorManager.cpp  DescriptorManager.h  PipelineFactory.cpp  PipelineFactory.h  VulkanRenderer.cpp  VulkanRenderer.h
Renderer/Vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDebugHandler.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanFrameBuffers.cpp  VulkanFrameBuffers.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanMemoryAllocator.cpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h
Renderer/headers/: Camera.h  CommandBufferRecorder.h  DescriptorManager.h  GltfLoader.h  ModelLoader.h  PipelineFactory.h  ResourceManager.h  Scene.h  VulkanBuffer.h  VulkanCommandBuffer.h  VulkanDescriptorPool.h  VulkanDescriptorSet.h  VulkanFrameBuffers.h  VulkanGraphicsPipeline.h  VulkanImage.h  VulkanMemoryAllocator.h  VulkanPhysicalDevice.h  VulkanPipeline.h  VulkanRenderer.h  VulkanSampler.h  VulkanSurface.h  Window.h  defines.h
Renderer/src/: Camera.cpp  CommandBufferRecorder.cpp  DescriptorManager.cpp  GltfLoader.cpp  ModelLoader.cpp  PipelineFactory.cpp  ResourceManager.cpp  Scene.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDebugHandler.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanFrameBuffers.cpp  VulkanGraphicsPipeline.cpp  VulkanImage.cpp  VulkanImageView.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanMemoryAllocator.cpp  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanSampler.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanSyncObjects.cpp  Window.cpp
shaders/: compileShaders.bat  frag.spv  fragShader.frag  vert.spv  vertShader.vert
shaders/PBR/forwardPBR/: forwardPBRFrag.frag  forwardPBRVert.vert
shaders/enviroment/envMap/: environmentFrag.frag  environmentVert.vert
shaders/enviroment/equiToCube/: equiToCubeFrag.frag  equiToCubeVert.vert
shaders/enviroment/ibl/: brdfLutFrag.frag  brdfLutVert.vert  envToFilterFrag.frag  envToFilterVert.vert  envToIrrFrag.frag  envToIrrVert.vert
shaders/include/: constants.glsl
shaders/include/brdf/: BRDF.glsl  samplingHelpers.glsl
(+11 files in other folders)
